# custom-penalty

./: README.md  example.ipynb  pyproject.toml  requirements.txt
src/custom_penalty/: __init__.py  solver.py
