[project]
name = "custom-penalty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xenoicwyce", email = "tl.bk@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "ipympl>=0.10.0",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pylatexenc>=2.10",
    "qaoalib>=0.3.1",
    "qiskit>=2.5.0",
    "qiskit-aer>=0.17.2",
    "qiskit-algorithms>=0.4.0",
    "qiskit-optimization[gurobi]>=0.7.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "tqdm>=4.69.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
